--- a/src/app/otp/otp.component.html
+++ b/src/app/otp/otp.component.html
@@ -50,6 +50,15 @@
                 
               </div>
             </form>
+            <div class="form-group">
+              <button                  
+                class="btn btn-secondry shadow-primary btn-block waves-effect waves-light"
+                (click)="goBack()"
+              >
+                Go Back
+              </button>
+              
+            </div>
           </div>
         </div>
         <div class="card-footer text-center py-3" *ngIf="!userExist">
