--- a/src/app/order-detail/order-detail.component.html
+++ b/src/app/order-detail/order-detail.component.html
@@ -1,3 +1,5 @@
+
+
 <div class="content-wrapper">
   <div class="container-fluid">
 
@@ -6,39 +8,69 @@
             <div class="card">
               <div class="card-header"><h5 class="form-header text-uppercase">
                   <i class="zmdi zmdi-view-list"></i>
-                   Orders Details
+                   List Orders
                 </h5></div>
               <div class="card-body">
                 <div class="table-responsive">
-                <table id="example" class="table table-bordered">
-                  <thead>
-                      <tr>
-                          <th>Id</th>
-                          <th>Order Id</th>
-                          <th>Item Id</th>
-                          <th>Quantity</th>
-                          <th>Total Price</th>
-                          <th>Action</th>
-                      </tr>
-                  </thead>
-                  <tbody>
-                      <tr>
-                          <td>1</td>
-                          <td>12</td>
-                          <td>3423</td>
-                          <td>2</td>
-                          <td>&#x20B9; 100</td>
-                          <td><span class="btn btn-sm btn-outline-danger btn-round btn-block">Cancel</span></td>
-                          
-                      </tr>
-                     
-                  </tbody>
-                 
-              </table>
+                
+                  
+                  <!-- <div *ngIf="dataSource"> -->
+                <div class="example-header">
+                  <mat-form-field>
+                    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search......">
+                  </mat-form-field>
+                </div>
+                <div class="example-container mat-elevation-z8">              
+                  <mat-table [dataSource]="dataSource" matSort>              
+                    <ng-container matColumnDef="order_id">
+                      <mat-header-cell *matHeaderCellDef mat-sort-header>Order ID </mat-header-cell>
+                      <mat-cell *matCellDef="let row"> {{row.order_id}} </mat-cell>
+                    </ng-container>
+                
+                     <ng-container matColumnDef="Product_name">
+                      <mat-header-cell *matHeaderCellDef mat-sort-header> Product Name </mat-header-cell>
+                      <mat-cell *matCellDef="let row"> {{row.Product_name}} </mat-cell>
+                    </ng-container>
+                    <ng-container matColumnDef="quantity">
+                      <mat-header-cell *matHeaderCellDef mat-sort-header> Quantity </mat-header-cell>
+                      <mat-cell *matCellDef="let row"> {{row.quantity}} </mat-cell>
+                    </ng-container>
+                    
+                
+                    <ng-container matColumnDef="user_name">
+                      <mat-header-cell *matHeaderCellDef mat-sort-header> Customer Name </mat-header-cell>
+                      <mat-cell *matCellDef="let row"> {{row.user_name}} </mat-cell>
+                    </ng-container>
+  
+                    <ng-container matColumnDef="time">
+                      <mat-header-cell *matHeaderCellDef mat-sort-header> Time </mat-header-cell>
+                      <mat-cell *matCellDef="let row"> {{row.time}} </mat-cell>
+                    </ng-container>
+                
+                    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+                    <mat-row *matRowDef="let row; columns: displayedColumns;">
+                    </mat-row> 
+                  </mat-table>
+                
+                  <mat-paginator [pageSizeOptions]="[25, 50, 100]"></mat-paginator>
+                </div>
+
+              <!-- </div> -->
+              
+              <!-- <ng-template #loading >
+                <div style="margin-left: 25rem;">
+                  <mat-spinner></mat-spinner>
+                </div>
+              </ng-template> -->
               </div>
               </div>
             </div>
           </div>
-        </div><!-- End Row-->
+        </div>
   </div>
 </div>
+
+
+
+
+
