--- a/src/app/otp/otp.component.html
+++ b/src/app/otp/otp.component.html
@@ -8,7 +8,7 @@
         <div class="card-body">
           <div class="card-content p-2">
             <div class="text-center">
-              <img src="assets/images/BSADMIN.jpg" alt="logo icon" width="200" />
+              <img src="assets/images/bsmp-logo.png" alt="logo icon" width="80" />
             </div>
             <div class="card-title text-uppercase text-center py-3">OTP</div>
     
