--- a/src/assets/css/app-style.css
+++ b/src/assets/css/app-style.css
@@ -408,7 +408,7 @@ hr {
 
 .brand-logo{
   width: 100%;
-  height: 60px;
+  /* height: 60px; */
   line-height: 60px;
   text-align: center;
   /* border-bottom: 1px solid rgba(255, 255, 255, 0.15); */
@@ -429,7 +429,7 @@ hr {
 }
 
 .logo-icon{
-    width: 90%;
+    width: 60%;
     margin-right: 5px;
 }
 
